--- a/deploy/roles/tamales/templates/nginx-tamales.site.j2
+++ b/deploy/roles/tamales/templates/nginx-tamales.site.j2
@@ -1,7 +1,7 @@
 server {
     listen 80;
 
-    server_name _;
+    server_name {{ tamales_server_name }};
 
     access_log  /var/log/nginx/tamales_access.log;
     error_log  /var/log/nginx/tamales_error.log;
