--- a/deploy/roles/tamales/templates/nginx-tamales.site.j2
+++ b/deploy/roles/tamales/templates/nginx-tamales.site.j2
@@ -1,3 +1,14 @@
+upstream tamales {
+    server {{ gunicorn_host }}:{{ gunicorn_port }};
+}
+
+map $request_method $limit {
+    default         "";
+    POST            $binary_remote_addr;
+}
+
+limit_req_zone $limit zone=tamales_api_post:{{ nginx_rl_zone_size }} rate={{ nginx_rl_zone_rate }};
+
 server {
     listen 80;
 
@@ -14,12 +25,24 @@ server {
     }
 
     location @tamales_app {
-        proxy_pass         http://{{ gunicorn_host }}:{{ gunicorn_port }};
+        proxy_pass         http://tamales;
         proxy_redirect     off;
 
         proxy_set_header   Host             $host;
         proxy_set_header   X-Real-IP        $remote_addr;
         proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+    }
+
+    location /api/ {
+        proxy_pass         http://tamales;
+        proxy_redirect     off;
+
+        proxy_set_header   Host             $host;
+        proxy_set_header   X-Real-IP        $remote_addr;
+        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+
+        limit_req zone=tamales_api_post burst={{ nginx_rl_zone_burst }};
+
         if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Credentials' 'true';
@@ -30,12 +53,14 @@ server {
             add_header 'Content-Length' 0;
             return 204;
         }
+
         if ($request_method = 'POST') {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Credentials' 'true';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
         }
+
         if ($request_method = 'GET') {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Credentials' 'true';
